part1_2049/2049-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game2049
  name: deployment2049
spec:
  selector:
    matchLabels:
      app: app2049
  replicas: 2
  template:
    metadata:
      labels:
        app: app2049
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: IfNotPresent
        name: app2049
        ports:
        - containerPort: 80
