part1_2049/2048-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2048
  namespace: game2048
spec:
  rules:
  - host: "game2048.127.0.0.1.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service2048
            port:
              number: 80
